v16.2/interfaces/GC.Spread.Sheets.Charts.IAxis.md
# Interface: IAxis

[Sheets](../modules/GC.Spread.Sheets.md).[Charts](../modules/GC.Spread.Sheets.Charts.md).IAxis

## Table of contents

### Properties

- [crossPoint](GC.Spread.Sheets.Charts.IAxis.md#crosspoint)
- [displayUnit](GC.Spread.Sheets.Charts.IAxis.md#displayunit)
- [format](GC.Spread.Sheets.Charts.IAxis.md#format)
- [labelAngle](GC.Spread.Sheets.Charts.IAxis.md#labelangle)
- [lineStyle](GC.Spread.Sheets.Charts.IAxis.md#linestyle)
- [majorGridLine](GC.Spread.Sheets.Charts.IAxis.md#majorgridline)
- [majorTickPosition](GC.Spread.Sheets.Charts.IAxis.md#majortickposition)
- [majorUnit](GC.Spread.Sheets.Charts.IAxis.md#majorunit)
- [max](GC.Spread.Sheets.Charts.IAxis.md#max)
- [min](GC.Spread.Sheets.Charts.IAxis.md#min)
- [minorGridLine](GC.Spread.Sheets.Charts.IAxis.md#minorgridline)
- [minorTickPosition](GC.Spread.Sheets.Charts.IAxis.md#minortickposition)
- [minorUnit](GC.Spread.Sheets.Charts.IAxis.md#minorunit)
- [scaling](GC.Spread.Sheets.Charts.IAxis.md#scaling)
- [style](GC.Spread.Sheets.Charts.IAxis.md#style)
- [tickLabelPosition](GC.Spread.Sheets.Charts.IAxis.md#ticklabelposition)
- [title](GC.Spread.Sheets.Charts.IAxis.md#title)
- [visible](GC.Spread.Sheets.Charts.IAxis.md#visible)

## Properties

### <a id="crosspoint" name="crosspoint"></a> crossPoint

• `Optional` **crossPoint**: `number` \| [`AxisCrossPoint`](../enums/GC.Spread.Sheets.Charts.AxisCrossPoint.md)

___

### <a id="displayunit" name="displayunit"></a> displayUnit

• `Optional` **displayUnit**: [`IDisplayUnit`](GC.Spread.Sheets.Charts.IDisplayUnit.md)

___

### <a id="format" name="format"></a> format

• `Optional` **format**: `string`

___

### <a id="labelangle" name="labelangle"></a> labelAngle

• `Optional` **labelAngle**: `number`

___

### <a id="linestyle" name="linestyle"></a> lineStyle

• `Optional` **lineStyle**: [`IBorder`](GC.Spread.Sheets.Charts.IBorder.md)

___

### <a id="majorgridline" name="majorgridline"></a> majorGridLine

• `Optional` **majorGridLine**: [`IGridLine`](GC.Spread.Sheets.Charts.IGridLine.md)

___

### <a id="majortickposition" name="majortickposition"></a> majorTickPosition

• `Optional` **majorTickPosition**: [`TickMark`](../enums/GC.Spread.Sheets.Charts.TickMark.md)

___

### <a id="majorunit" name="majorunit"></a> majorUnit

• `Optional` **majorUnit**: `number`

___

### <a id="max" name="max"></a> max

• `Optional` **max**: `number` \| `Date`

___

### <a id="min" name="min"></a> min

• `Optional` **min**: `number` \| `Date`

___

### <a id="minorgridline" name="minorgridline"></a> minorGridLine

• `Optional` **minorGridLine**: [`IGridLine`](GC.Spread.Sheets.Charts.IGridLine.md)

___

### <a id="minortickposition" name="minortickposition"></a> minorTickPosition

• `Optional` **minorTickPosition**: [`TickMark`](../enums/GC.Spread.Sheets.Charts.TickMark.md)

___

### <a id="minorunit" name="minorunit"></a> minorUnit

• `Optional` **minorUnit**: `number`

___

### <a id="scaling" name="scaling"></a> scaling

• `Optional` **scaling**: [`IScaling`](GC.Spread.Sheets.Charts.IScaling.md)

___

### <a id="style" name="style"></a> style

• `Optional` **style**: [`IAxisStyle`](GC.Spread.Sheets.Charts.IAxisStyle.md)

___

### <a id="ticklabelposition" name="ticklabelposition"></a> tickLabelPosition

• `Optional` **tickLabelPosition**: [`TickLabelPosition`](../enums/GC.Spread.Sheets.Charts.TickLabelPosition.md)

___

### <a id="title" name="title"></a> title

• `Optional` **title**: [`IAxisTitle`](GC.Spread.Sheets.Charts.IAxisTitle.md)

___

### <a id="visible" name="visible"></a> visible

• `Optional` **visible**: `boolean`
